[gd_scene load_steps=5 format=2]

[ext_resource path="res://pictures/lightning.png" type="Texture" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]
[ext_resource path="res://pictures/fire.png" type="Texture" id=3]
[ext_resource path="res://pictures/wind.png" type="Texture" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )

[node name="PowerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 50.0
margin_right = 60.0
margin_bottom = 90.0
text = "Powers Left: 0"
align = 1
valign = 1

[node name="NextButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -10.0
margin_right = 42.5
margin_bottom = 10.0
text = "Next Island"

[node name="OverLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -100.0
margin_right = 88.0
margin_bottom = -86.0
text = "???"
align = 1
valign = 1

[node name="Buttons" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -50.0
margin_bottom = -50.0

[node name="FireButton" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -100.0
margin_right = -70.0
margin_bottom = 34.0
icon = ExtResource( 3 )
flat = true

[node name="WindButton" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -100.0
margin_right = 70.0
margin_bottom = 34.0
icon = ExtResource( 4 )
flat = true

[node name="LightningButton" type="Button" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -100.0
margin_right = 210.0
margin_bottom = 40.5
icon = ExtResource( 1 )
flat = true

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Buttons/FireButton" to="." method="_on_FireButton_pressed"]
[connection signal="pressed" from="Buttons/WindButton" to="." method="_on_WindButton_pressed"]
[connection signal="pressed" from="Buttons/LightningButton" to="." method="_on_LightningButton_pressed"]
